--- a/apps/wrapper/src/components/GenericForm/index.module.css
+++ b/apps/wrapper/src/components/GenericForm/index.module.css
@@ -9,19 +9,19 @@
     position: relative;
 }
 
-.container >div:nth-child(1) {
+.header {
+    display:flex;
+    flex-direction: row;
+    width:94%;
+    justify-content: space-between;
     font-size: 3rem;
     color: #ffc119;
+    margin: 0.5rem 0rem;
 }
 
-.container >div:nth-child(2) {
-    font-size: 1rem;
-    color: #ffc119;
-    position: absolute;
-    top: 0;
-    left: 0;
+.header>div:nth-child(1) {
     cursor: pointer;
-    margin-top: 1.5rem;
+    color: #efefef;
 }
 
 .formContainer {
@@ -39,8 +39,16 @@
 }
 
 .jsonResponse {
-    border: 1px solid #fff;
+    border: 1px solid #efefef;
     width: 45%;
     height: 100%;
-    box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
+    overflow: hidden;
+}
+
+.formText {
+    height: 100%;
+    width: 100%;
+    background: #2b2b2b;
+    color: #efefef;
+    padding: 1rem;
 }
